# minniebooks

./: README.md
backend/: manage.py  pyproject.toml
backend/books/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/books/migrations/: 0001_initial.py  0002_alter_author_books_alter_bookrecommandation_book_and_more.py  0002_rename_books_author_books_and_more.py
backend/minniebooks/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_minniebooksuser.py  0003_minniebooksuser_profilepicture.py  0004_delete_user_and_more.py
backend/utils/: __init__.py
frontend/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/api/: auth.ts  author.ts  book.ts  feed.ts  fetcher.ts  friend.ts  progress-update.ts  requests.ts  review.ts  user.ts
frontend/src/components/: AuthGuard.tsx  AuthorDetail.tsx  BookDetail.tsx  BookGrid.tsx  BookItem.tsx  BookRecommendationEditor.tsx  BookRecommendationEditorDialog.tsx  Button.tsx  FriendshipActionButton.tsx  Navbar.tsx  ProgressUpdateEditor.tsx  ProgressUpdateEditorDialog.tsx  PublisherFilter.tsx  RatingSelector.tsx  ReviewEditor.tsx  ReviewList.tsx  ShortLink.tsx  StarRating.tsx  UserDetail.tsx  filters.tsx  navbar.tsx
frontend/src/entities/: ProgressUpdate.ts  author.ts  book.ts  feed.ts  review.ts  user.ts
frontend/src/pages/: _app.tsx  feed.tsx  friends.tsx  index.tsx  login.tsx  register.tsx  search.tsx
frontend/src/styles/: Home.module.css  (+7 more)
(+8 files in other folders)
