[tool.poetry]
name = "minniebooks"
description = "Books & typing test"
authors = ["Andrei", "Stefan", "Andrei", "Adela"]
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1"
djangorestframework = "^3.14"
django-extensions = "^3.2"
psycopg2-binary = "^2.9"
django-cors-headers = "^3.13.0"
